Refactor Resource handling to use recorde update application configuration for Hibernate and Kafka integration